deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bentoml-ocr
  labels:
    app.kubernetes.io/part-of: bentoml-ocr
